<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/navbar_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/grey"/>
    <item
        android:id="@+id/chatbot"
        android:title="@string/navbar_chatbot"
        android:icon="@drawable/ic_chatbot"
        android:iconTint="@color/grey"/>
    <item
        android:id="@+id/recipeAdd"
        android:title="@string/navbar_add_recipe"
        android:icon="@drawable/ic_add_recipe"
        android:iconTint="@color/grey"/>
    <item
        android:id="@+id/favourites"
        android:title="@string/navbar_Favourites"
        android:icon="@drawable/ic_favourite"
        android:iconTint="@color/grey"/>
    <item
        android:id="@+id/profile"
        android:title="@string/navbar_profile"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/grey"/>

</menu>

