<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_colour"
    android:fillViewport="true"
    tools:context="ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_profile_title"
            android:textColor="@color/primary_colour"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/ic_food_bunny"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_username"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etProfileUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:hint="@string/hint_edit_username"
            android:textColorHint="@color/black"
            android:padding="10dp"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:background="@drawable/rounded_edges"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_email"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/rounded_edges"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_password"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etProfilePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:hint="@string/hint_edit_password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            android:padding="10dp"
            android:background="@drawable/rounded_edges"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/primary_colour"
                android:text="@string/btn_update"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogOut"
                style="android:attr/ buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/primary_colour"
                android:text="@string/btn_logout"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="23sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="8dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEditRecipe"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/txt_edit"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <ImageButton
                android:id="@+id/btnRecipeArrow"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_forward_arrow" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="8dp"
            android:background="#ddd" />

    </LinearLayout>
</ScrollView>