<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/bg_colour">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/primary_colour"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/ic_food_bunny"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome_back"
            android:textColor="@color/primary_colour"
            android:textSize="30sp"
            android:paddingTop="60dp"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/highlight_colour"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"/>

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textSize="18dp"
            android:backgroundTint="@color/highlight_colour"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:text="@string/btn_login"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="@null"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:text="@string/txt_signup"
            android:textAlignment="center"/>

    </LinearLayout>

</ScrollView>