<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment"
    android:background="@color/bg_colour">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_home_greeting"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/primary_colour"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_home_msg"
                android:textSize="27sp"
                android:textColor="@color/primary_colour"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/ic_food_bunny"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:background="@drawable/bg_search"
            android:layout_margin="4dp">

            <SearchView
                android:id="@+id/svSearchBar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search_bar" />

            <ImageButton
                android:id="@+id/btnFilter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_filter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/btnCatBreakfast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:padding="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/cat_breakfast"
                android:src="@drawable/ic_cat1"
                android:background="@drawable/bg_circle"/>

            <ImageButton
                android:id="@+id/btnCatDinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:padding="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/cat_dinner"
                android:src="@drawable/ic_cat2"
                android:background="@drawable/bg_circle"/>

            <ImageButton
                android:id="@+id/btnCatSnack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:padding="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/cat_snacks"
                android:src="@drawable/ic_cat4"
                android:background="@drawable/bg_circle"/>

            <ImageButton
                android:id="@+id/btnCatDessert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:padding="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/cat_desserts"
                android:src="@drawable/ic_cat3"
                android:background="@drawable/bg_circle"/>

            <ImageButton
                android:id="@+id/btnCatBeverage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:padding="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/cat_bevs"
                android:src="@drawable/ic_cat5"
                android:background="@drawable/bg_circle"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_home_title"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:textColor="@color/primary_colour"
            android:layout_marginTop="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/item_recipe"/>

    </LinearLayout>

</ScrollView>