<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_colour"
    tools:context=".ui.EditYourRecipesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/secondary_colour">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/btnGoBackToProfile"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:background="@color/secondary_colour"
                    android:src="@drawable/ic_backwards_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_recipe_title"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_recipe_your_recipes"
                android:textSize="22sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/layout_empty_my_recipes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"/>

            <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMyRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            tools:listitem="@layout/item_edit_recipe_"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>